FullQa New/src/objects/Version__c.object
<CustomObject>
    <description>Used as an associated related list for the connector object to track the version associated with a given connector</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>https://jira.avalara.com/browse/ITBSE-1258</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Model__c</fullName>
        <defaultValue>&quot;Conforms&quot;</defaultValue>
        <description>https://jira.avalara.com/browse/ITBSE-1111</description>
        <label>Activity Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conforms</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Excessive API calls</fullName>
                </value>
                <value>
                    <fullName>Erratic</fullName>
                </value>
                <value>
                    <fullName>Fewer API calls</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Signatures__c</fullName>
        <label>Additional Signatures</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture_Review__c</fullName>
        <description>Date of the architecture review</description>
        <inlineHelpText>Date of the architecture review</inlineHelpText>
        <label>Architecture Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Call_Hours__c</fullName>
        <description>Call hours spent on certification reviews. Can be a decimal: 2.5 = 2 hours and 30 minutes of certification call time</description>
        <inlineHelpText>Call hours spent on certification reviews. Can be a decimal: 2.5 = 2 hours and 30 minutes of certification call time. Field is manually updated by Certification Managers when taking notes on certification calls.</inlineHelpText>
        <label>Certification Call Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certification_Intention__c</fullName>
        <description>whether or not the partner is committed to certifying in a reasonably timely fashion (within 90 days)</description>
        <inlineHelpText>whether or not the partner is committed to certifying in a reasonably timely fashion (within 90 days)</inlineHelpText>
        <label>Certification Intention</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unsure</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_A16__c</fullName>
        <label>Certified A16</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Address_Validation__c</fullName>
        <label>Certified Address Validation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Calc__c</fullName>
        <label>Certified Calc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Certs__c</fullName>
        <label>Certified CertCapture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Communications_Tax__c</fullName>
        <label>Certified Communications Tax</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Excise_Tax__c</fullName>
        <label>Certified Excise Tax</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Global__c</fullName>
        <label>Certified Global</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Landed_Cost__c</fullName>
        <label>Certified Landed Cost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Lodging_Tax__c</fullName>
        <label>Certified Lodging Tax</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Onboarding__c</fullName>
        <label>Certified Onboarding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_POS__c</fullName>
        <label>Certified POS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_Returns__c</fullName>
        <label>Certified Product Returns</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_SHIM__c</fullName>
        <label>Certified SHIM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certified_UPC__c</fullName>
        <description>The date on which UPC Certification was achieved</description>
        <inlineHelpText>The date on which UPC Certification was achieved</inlineHelpText>
        <label>Certified UPC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Summary__c</fullName>
        <label>Change Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connector_Vibrancy__c</fullName>
        <description>Pulled directly from the Connector Vibrancy to show current connector stage
Partner Programs/Support: Asher/Liz Arm.</description>
        <formula>TEXT(Connector__r.Vibrancy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Vibrancy of the Connector</inlineHelpText>
        <label>Connector Vibrancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connector__c</fullName>
        <label>Connector</label>
        <referenceTo>Connector__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_New_Partner_Launch_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Partner Launch Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Certified_Release__c</fullName>
        <label>Version Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Development Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERPVersion__c</fullName>
        <description>Purpose: To provide explanation of what version of ERP this version of connector is associated with
Change Level: 1
Integrated: No
Custodian: Connectors (Julia King/Rohit Ghule)</description>
        <label>ERP Version</label>
        <length>188</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery_Date__c</fullName>
        <description>The estimated delivery date of the connector version to conclude development.</description>
        <inlineHelpText>The estimated delivery date of the connector version to conclude development.

defaulted to today + 90 when first entered.</inlineHelpText>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickoff_Call__c</fullName>
        <description>Date the partner kickoff call was completed</description>
        <inlineHelpText>Date the partner kickoff call was completed</inlineHelpText>
        <label>Kickoff Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Certification__c</fullName>
        <label>Marketing Certification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Sub Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Developer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The developer contact referring to the partner developer working on the version of the integration. It should pull from the partner&apos;s contact list on the account object.
IBST-82 Partner Launch team</description>
        <label>Partner Developer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Signature_Lookup__c</fullName>
        <formula>Version_KB__r.Transaction_Signature__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Signature Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Signature__c</fullName>
        <inlineHelpText>Primary Connector Signature included in the connection string</inlineHelpText>
        <label>X-Avalara-Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>ITBSE-973</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Details__c</fullName>
        <description>Notes and details pertaining to the status that the version is in.</description>
        <inlineHelpText>Notes and details pertaining to the status that the version is in.</inlineHelpText>
        <label>Status Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Certified</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Revoked/Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>Reportable details regarding connector status. Dependent on Status field.</description>
        <inlineHelpText>Reportable details regarding connector status. Dependent on Status field.</inlineHelpText>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>(Deprecated) Waiting for first customer</fullName>
                </value>
                <value>
                    <fullName>(Deprecated) Interested, no resources</fullName>
                </value>
                <value>
                    <fullName>(Deprecated) Not engaged</fullName>
                </value>
                <value>
                    <fullName>(Deprecated) PITA</fullName>
                </value>
                <value>
                    <fullName>(Deprecated) No pain</fullName>
                </value>
                <value>
                    <fullName>No Progress</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Dev Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Q_A__c</fullName>
        <description>Date of the technical Q&amp;A Call</description>
        <inlineHelpText>Date of the technical Q&amp;A Call</inlineHelpText>
        <label>Tech Q&amp;A</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version_CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_KB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Version KB</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X_Avalara_UID__c</fullName>
        <label>X-Avalara-UID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>